--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "openai": "github:openai/openai-node",
+    "vue": "^2.7.14",
+    "@openai/api": "git+https://github.com/openai/openai-node.git"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
